{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 28,
  "lineage": "f96fec50-f3c5-e738-8ee4-8e06f63ac81a",
  "resources": [
    {
      "module": "module.ingress-nginx",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "ingress_nginx",
      "provider": "module.ingress-nginx.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/nginx-ingress-controller",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "nginx-ingress-controller",
                  "meta.helm.sh/release-namespace": "default"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress-controller",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "nginx-ingress-controller",
                  "helm.sh/chart": "nginx-ingress-controller-9.7.5"
                },
                "name": "nginx-ingress-controller",
                "namespace": "default",
                "resource_version": "653",
                "uid": "52a4ef58-5ac5-4b10-af24-3fb18ea34997"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.30.19",
                "cluster_ips": [
                  "172.20.30.19"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30440,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "http"
                  },
                  {
                    "name": "https",
                    "node_port": 32405,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "https"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress-controller",
                  "app.kubernetes.io/name": "nginx-ingress-controller"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a52a4ef585ac54b10af243fb18ea3499-2093271470.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.ingress-nginx",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "ingress-deployment",
      "provider": "module.ingress-nginx.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/deployment-steel-eye-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "deployment-steel-eye-ingress",
                "namespace": "default",
                "resource_version": "1355",
                "uid": "bb05d937-66ec-4d07-9fee-75b86dc45306"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "deployment-steel-eye-app2-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 5678
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/app2",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.235.87.228"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": true
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ingress-nginx.data.aws_eks_cluster.cluster",
            "module.ingress-nginx.data.aws_eks_cluster_auth.cluster",
            "module.public_eks_cluster.aws_eks_cluster.this",
            "module.public_eks_cluster.aws_iam_role.eksClusterRole",
            "module.public_eks_cluster.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.public_eks_cluster.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController",
            "module.public_eks_cluster.data.aws_region.current",
            "module.public_eks_cluster.module.vpc.aws_subnet.public",
            "module.public_eks_cluster.module.vpc.aws_vpc.this",
            "module.public_eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ingress-nginx",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "app2_service",
      "provider": "module.ingress-nginx.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/deployment-steel-eye-app2-service",
            "metadata": [
              {
                "generation": 0,
                "name": "deployment-steel-eye-app2-service",
                "namespace": "default",
                "resource_version": "1073",
                "uid": "79ee48ab-5d53-4c4a-a75c-e4c8380869d3"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.129.42",
                "cluster_ips": [
                  "172.20.129.42"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5678,
                    "protocol": "TCP",
                    "target_port": "5678"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "steel-eye-app"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.ingress-nginx.data.aws_eks_cluster.cluster",
            "module.ingress-nginx.data.aws_eks_cluster_auth.cluster",
            "module.ingress-nginx.kubernetes_deployment.example_deployment",
            "module.public_eks_cluster.aws_eks_cluster.this",
            "module.public_eks_cluster.aws_iam_role.eksClusterRole",
            "module.public_eks_cluster.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.public_eks_cluster.aws_iam_role_policy_attachment.AmazonEKSVPCResourceController",
            "module.public_eks_cluster.data.aws_region.current",
            "module.public_eks_cluster.module.vpc.aws_subnet.public",
            "module.public_eks_cluster.module.vpc.aws_vpc.this",
            "module.public_eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987728975796:network-acl/acl-086a9ed83c472d37f",
            "default_network_acl_id": "acl-086a9ed83c472d37f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-086a9ed83c472d37f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "987728975796",
            "subnet_ids": [
              "subnet-06835bbf32b9e3d5d",
              "subnet-0b0cf3d85c0abb697"
            ],
            "tags": {
              "Name": "steel-eye-vpc"
            },
            "tags_all": {
              "Name": "steel-eye-vpc"
            },
            "vpc_id": "vpc-08f6b37a9e54ffc30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_eks_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987728975796:route-table/rtb-074b83bf44efd228f",
            "default_route_table_id": "rtb-074b83bf44efd228f",
            "id": "rtb-074b83bf44efd228f",
            "owner_id": "987728975796",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "steel-eye-vpc"
            },
            "tags_all": {
              "Name": "steel-eye-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08f6b37a9e54ffc30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_eks_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987728975796:security-group/sg-0d752d4f935b1bc40",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d752d4f935b1bc40",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "987728975796",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "steel-eye-vpc"
            },
            "tags_all": {
              "Name": "steel-eye-vpc"
            },
            "vpc_id": "vpc-08f6b37a9e54ffc30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_eks_cluster.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987728975796:internet-gateway/igw-01c43c188d767ff58",
            "id": "igw-01c43c188d767ff58",
            "owner_id": "987728975796",
            "tags": {
              "Name": "steel-eye-vpc"
            },
            "tags_all": {
              "Name": "steel-eye-vpc"
            },
            "vpc_id": "vpc-08f6b37a9e54ffc30"
          },
          "dependencies": [
            "module.public_eks_cluster.module.vpc.aws_vpc.this",
            "module.public_eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c43c188d767ff58",
            "id": "r-rtb-08687cfc1847afd571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08687cfc1847afd57",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_eks_cluster.module.vpc.aws_internet_gateway.this",
            "module.public_eks_cluster.module.vpc.aws_route_table.public",
            "module.public_eks_cluster.module.vpc.aws_vpc.this",
            "module.public_eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987728975796:route-table/rtb-08687cfc1847afd57",
            "id": "rtb-08687cfc1847afd57",
            "owner_id": "987728975796",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "steel-eye-vpc"
            },
            "tags_all": {
              "Name": "steel-eye-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f6b37a9e54ffc30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_eks_cluster.module.vpc.aws_vpc.this",
            "module.public_eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033245622123f33d3",
            "route_table_id": "rtb-08687cfc1847afd57",
            "subnet_id": "subnet-0b0cf3d85c0abb697"
          },
          "dependencies": [
            "module.public_eks_cluster.data.aws_region.current",
            "module.public_eks_cluster.module.vpc.aws_route_table.public",
            "module.public_eks_cluster.module.vpc.aws_subnet.public",
            "module.public_eks_cluster.module.vpc.aws_vpc.this",
            "module.public_eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067e499d888f87e2f",
            "route_table_id": "rtb-08687cfc1847afd57",
            "subnet_id": "subnet-06835bbf32b9e3d5d"
          },
          "dependencies": [
            "module.public_eks_cluster.data.aws_region.current",
            "module.public_eks_cluster.module.vpc.aws_route_table.public",
            "module.public_eks_cluster.module.vpc.aws_subnet.public",
            "module.public_eks_cluster.module.vpc.aws_vpc.this",
            "module.public_eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987728975796:subnet/subnet-0b0cf3d85c0abb697",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0cf3d85c0abb697",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987728975796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet",
              "kubernetes.io/cluster/steel-eye-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public subnet",
              "kubernetes.io/cluster/steel-eye-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08f6b37a9e54ffc30"
          },
          "dependencies": [
            "module.public_eks_cluster.data.aws_region.current",
            "module.public_eks_cluster.module.vpc.aws_vpc.this",
            "module.public_eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987728975796:subnet/subnet-06835bbf32b9e3d5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06835bbf32b9e3d5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987728975796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet",
              "kubernetes.io/cluster/steel-eye-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public subnet",
              "kubernetes.io/cluster/steel-eye-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08f6b37a9e54ffc30"
          },
          "dependencies": [
            "module.public_eks_cluster.data.aws_region.current",
            "module.public_eks_cluster.module.vpc.aws_vpc.this",
            "module.public_eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987728975796:vpc/vpc-08f6b37a9e54ffc30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086a9ed83c472d37f",
            "default_route_table_id": "rtb-074b83bf44efd228f",
            "default_security_group_id": "sg-0d752d4f935b1bc40",
            "dhcp_options_id": "dopt-06201ae0b4cb7109d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f6b37a9e54ffc30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074b83bf44efd228f",
            "owner_id": "987728975796",
            "tags": {
              "Name": "steel-eye-vpc"
            },
            "tags_all": {
              "Name": "steel-eye-vpc"
            }
          }
        }
      ]
    }
  ]
}